# univr-fellowships-crawler

./: .env.example  .gitignore  Dockerfile  README.md  crawler.py  docker-compose.yml  entrypoint.sh  page.py  page_example.html  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: crawler.yml
